fix page layout on mobile

--- a/src/css/Hello.css
+++ b/src/css/Hello.css
@@ -6,9 +6,14 @@ div.main-wrapper {
     /* border: 0px;
     margin: 0;
     overflow: hidden; */
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
     display: flex;
     flex-direction: column;
-    /* max-height: 100vh; */
+    height: 100vh;
     /* border: 3px solid orange; */
 }
 
